--- a/manipulation_tasks_panda/box_localization/package.xml
+++ b/manipulation_tasks_panda/box_localization/package.xml
@@ -52,6 +52,10 @@
   <build_depend>rospy</build_depend>
   <build_export_depend>rospy</build_export_depend>
   <exec_depend>rospy</exec_depend>
+  <depend>dynamic_reconfigure</depend>
+  <build_depend>message_generation</build_depend>
+  <exec_depend>message_runtime</exec_depend>
+	
 
 
   <!-- The export tag contains other, unspecified, tags -->
