--- a/object_localization/cfg/filter_values_config.cfg
+++ b/object_localization/cfg/filter_values_config.cfg
@@ -1,5 +1,5 @@
 #!/usr/bin/env python3
-PACKAGE = "box_localization"
+PACKAGE = "object_localization"
  
 from dynamic_reconfigure.parameter_generator_catkin import *
  
@@ -18,4 +18,4 @@ for detector_name in detector_names:
 		gen.add(f'{detector_name}_{i}_low', int_t, 0, "", defaults[detector_name][i][0], 1, 255)
 		gen.add(f'{detector_name}_{i}_up', int_t, 0, "", defaults[detector_name][i][1], 1, 255)
 		
-exit(gen.generate(PACKAGE, "box_localization", "FilterValues"))
+exit(gen.generate(PACKAGE, "object_localization", "FilterValues"))
