--- a/skills_manager/CMakeLists.txt
+++ b/skills_manager/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(trajectory_manager)
+project(skills_manager)
 
 find_package(catkin REQUIRED COMPONENTS
   roscpp
