--- a/skills_manager/package.xml
+++ b/skills_manager/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>trajectory_manager</name>
+  <name>skills_manager</name>
   <version>0.0.0</version>
-  <description>The trajectory_manager package</description>
+  <description>The skills_manager package</description>
   <maintainer email="g.franzese@tudelft.nl">franzesegiovanni</maintainer>
   <license>TODO</license>
   <buildtool_depend>catkin</buildtool_depend>
