Adds service and implement black filter @MRamirez25.

--- a/object_localization/CMakeLists.txt
+++ b/object_localization/CMakeLists.txt
@@ -19,6 +19,8 @@ find_package(catkin REQUIRED COMPONENTS
 add_service_files(
   FILES
   ComputeLocalization.srv
+  GlobalRegistrationLocalizer.srv
+  SavingPointcloud.srv
 )
 
 # Make sure that your Python modules are available for import within your package
