--- a/object_localization/CMakeLists.txt
+++ b/object_localization/CMakeLists.txt
@@ -20,6 +20,7 @@ add_service_files(
   FILES
   ComputeLocalization.srv
   GlobalRegistrationLocalizer.srv
+  IterativeRegistrationLocalizer.srv
   SavingPointcloud.srv
 )
 
